net40: build succeeded + commented deletionDate
deletionDate: the api definition contains an invalid date format
("deletionDate": "2014-07-06:00:00+01:00")
ugly fix about "complexType"
support newer num values: replace those chars: ' ', '(', ')'

--- a/NET40.OVHApi/Templates/Operations.tt
+++ b/NET40.OVHApi/Templates/Operations.tt
@@ -2,6 +2,7 @@
 <#@ assembly name="$(SolutionDir)/OVHApi.Parser/bin/Debug/OVHApi.Parser.exe" #>
 <#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="OVHApi.Parser" #>
+<#@ output extension=".sync.cs" #>
 <#
 	List<OvhApi> apis = new List<OvhApi>();
 	apis.AddRange(new HttpFileLoader().Load());
